Update cloudflared and driftctl
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/cloudflared/Dockerfile
+++ b/cloudflared/Dockerfile
@@ -16,6 +16,8 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/cloudflared.tar.gz \
 	&& tar xzf /tmp/cloudflared.tar.gz --strip 1 -C /go/src/github.com/cloudflare/cloudflared \
+	&& go get -u github.com/cloudflare/circl \
+	&& go mod vendor \
 	&& go build -o cloudflared -v -trimpath -buildmode=pie -ldflags="-s -w -X main.Version=${BUILD_VERSION}" ./cmd/cloudflared/ \
 	&& adduser -S cloudflared \
 	&& mkdir /etc/cloudflared
