--- a/.github/workflows/cloudflared.yml
+++ b/.github/workflows/cloudflared.yml
@@ -43,6 +43,7 @@ jobs:
             proxy.golang.org:443
             rdfepirv2bl2prdstr03.blob.core.windows.net:443
             registry-1.docker.io:443
+            storage.googleapis.com:443
             sum.golang.org:443
             zrdfepirv2blaprdstr01a.blob.core.windows.net:443
             zrdfepirv2bz6prdstr07a.blob.core.windows.net:443
