--- a/.github/workflows/testssl.sh.yml
+++ b/.github/workflows/testssl.sh.yml
@@ -115,7 +115,7 @@ jobs:
 #            docker.io/${{ env.REPOSITORY }}:3.0
 #            ghcr.io/${{ env.REPOSITORY }}:3.0
 
-      - name: Build and push (3.1dev)
+      - name: Build and push (3.2)
         uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825 # v2.8.0
         with:
           push: ${{ github.event_name != 'pull_request' }}
@@ -124,15 +124,15 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/386,linux/arm/v7,linux/arm/v6
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le,linux/s390x
           build-args: |
-            BUILD_VERSION=3.1dev
+            BUILD_VERSION=3.2
           sbom: true
           provenance: true
           cache-from: type=gha, scope=${{ github.workflow }}
           cache-to: type=gha, scope=${{ github.workflow }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           tags: |
-            docker.io/${{ env.REPOSITORY }}:3.1dev
+            docker.io/${{ env.REPOSITORY }}:3.2
             docker.io/${{ env.REPOSITORY }}:latest
-            ghcr.io/${{ env.REPOSITORY }}:3.1dev
+            ghcr.io/${{ env.REPOSITORY }}:3.2
             ghcr.io/${{ env.REPOSITORY }}:latest
 
