Update ansible and catprinter
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/.github/workflows/catprinter.yml
+++ b/.github/workflows/catprinter.yml
@@ -37,6 +37,7 @@ jobs:
           egress-policy: block
           disable-telemetry: true
           allowed-endpoints: >
+            acghubeus1.actions.githubusercontent.com:443
             api.github.com:443
             archive.ubuntu.com:80
             auth.docker.io:443
@@ -44,6 +45,7 @@ jobs:
             ghcr.io:443
             github.com:443
             index.docker.io:443
+            pipelinesghubeus2.actions.githubusercontent.com:443
             ports.ubuntu.com:80
             production.cloudflare.docker.com:443
             pypi.org:443
