--- a/.github/workflows/sslyze.yml
+++ b/.github/workflows/sslyze.yml
@@ -37,6 +37,7 @@ jobs:
           egress-policy: block
           disable-telemetry: true
           allowed-endpoints: 
+            acghubeus1.actions.githubusercontent.com:443
             api.github.com:443
             archive.ubuntu.com:80
             auth.docker.io:443
