--- a/sslyze/Pipfile
+++ b/sslyze/Pipfile
@@ -11,26 +11,24 @@ name = "piwheels"
 [packages]
 sslyze = "*"
 nassl = "*"
-#nassl = ">=4.0.0,<5.0.0"
-#cryptography = ">=2.6,<3.4"
 cryptography = "*"
 tls-parser = "*"
 pydantic = "*"
 wheel = "*"
 
 [dev-packages]
-mypy = "*"
-flake8 = "*"
-invoke = "*"
-pytest = "*"
-sphinx = "*"
-sphinx-rtd-theme = "*"
-twine = "*"
-sphinx-autodoc-typehints = "*"
+#mypy = "*"
+#flake8 = "*"
+#invoke = "*"
+#pytest = "*"
+#sphinx = "*"
+#sphinx-rtd-theme = "*"
+#twine = "*"
+#sphinx-autodoc-typehints = "*"
 #black = "==20.8b1"
-black = "*"
-pytest-cov = "*"
-faker = "*"
+#black = "*"
+#pytest-cov = "*"
+#faker = "*"
 
 [requires]
 python_version = "3"
