--- a/coredns/Dockerfile
+++ b/coredns/Dockerfile
@@ -16,8 +16,8 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/coredns.tar.gz \
 	&& tar xzf /tmp/coredns.tar.gz --strip 1 -C /go/src/github.com/coredns/coredns \
-	&& go get -u golang.org/x/net \
-	&& go mod tidy \
+	#&& go get -u golang.org/x/net \
+	#&& go mod tidy \
 	&& make
 
 # Validation check
