Workaround sslyze cryptography constraint
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/sslyze/Pipfile
+++ b/sslyze/Pipfile
@@ -9,7 +9,8 @@ verify_ssl = true
 name = "piwheels"
 
 [packages]
-sslyze = "*"
+#sslyze = "*"
+sslyze = { git = "https://github.com/jauderho/sslyze.git", editable = true }
 nassl = "*"
 cryptography = "*"
 tls-parser = "*"
