--- a/sslyze/requirements.txt
+++ b/sslyze/requirements.txt
@@ -1,12 +1,12 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
 cffi==1.15.1
-cryptography==39.0.2
+cryptography==41.0.3
 nassl==5.0.1
 pycparser==2.21
 pydantic==1.10.12
 pyopenssl==23.2.0; python_version >= '3.6'
-sslyze==5.1.3
+sslyze @ git+https://github.com/jauderho/sslyze.git@d9da1d9e69418150151f9cfa51c773d1733b6049
 tls-parser==2.0.1
 typing-extensions==4.7.1; python_version >= '3.7'
 wheel==0.41.1
