--- a/sslyze/Dockerfile
+++ b/sslyze/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update && \
 	DEBIAN_FRONTEND=${DEBIAN_FRONTEND} apt-get install -y --no-install-recommends python3-pip git && \
 	python3 -m pip install --no-cache-dir --upgrade pip --break-system-packages && \
 	pip3 install --no-cache-dir -r requirements.txt --break-system-packages && \
-	apt-get purge git && \
+	apt-get purge -y git && \
 	apt-get autoremove -y --purge && \
 	rm -rf /var/lib/apt/lists/* && \
 	apt-get clean
