--- a/sslyze/Dockerfile.alpine
+++ b/sslyze/Dockerfile.alpine
@@ -13,7 +13,7 @@ COPY requirements.txt .
 RUN \
 	apk update && \
 	apk upgrade -a && \
-	build_pkgs="cargo build-base libffi-dev openssl-dev python3-dev py3-pip" && \
+	build_pkgs="cargo build-base libffi-dev openssl-dev python3-dev py3-pip git" && \
 	runtime_pkgs="ca-certificates openssl python3" && \
 	apk --no-cache add --virtual build-dependencies ${build_pkgs} && \
 	apk --no-cache add ${runtime_pkgs} && \
