--- a/pwru/Dockerfile
+++ b/pwru/Dockerfile
@@ -1,4 +1,5 @@
-FROM ubuntu:23.04@sha256:b5d5cddaeb8d2f150660cf8f9a1203dd450ac765e6c07630176ac6486eceaddb AS build
+#FROM ubuntu:23.04@sha256:b5d5cddaeb8d2f150660cf8f9a1203dd450ac765e6c07630176ac6486eceaddb AS build
+FROM ubuntu:23.10 AS build
 #FROM golang:1.20.6-bookworm@sha256:c0e68a3dd1e676d2ea57e6b86bdf69e6e9a60ac079d9420e3b85d0e288ea1001 AS build
 
 WORKDIR /go/src/github.com/cilium/pwru/
@@ -15,7 +16,8 @@ RUN test -n "${BUILD_VERSION}" \
 	&& DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y -q curl build-essential git ca-certificates llvm-16 clang-16 golang-go gcc flex bison \
 	&& ln -s /usr/bin/clang-16 /usr/bin/clang \
 	&& ln -s /usr/bin/llvm-strip-16 /usr/bin/llvm-strip \
-	&& git clone --depth 1 ${GIT_URL} --branch ${BUILD_VERSION} /go/src/github.com/cilium/pwru \
+	#&& git clone --depth 1 ${GIT_URL} --branch ${BUILD_VERSION} /go/src/github.com/cilium/pwru \
+	&& git clone --depth 1 ${GIT_URL} /go/src/github.com/cilium/pwru \
 	&& cd /go/src/github.com/cilium/pwru \
 	&& cd libpcap \
 	&& ./configure --disable-rdma --disable-shared --disable-usb --disable-netmap --disable-bluetooth --disable-dbus --without-libnl \
