--- a/catprinter/requirements.txt
+++ b/catprinter/requirements.txt
@@ -1,7 +1,7 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
-bleak==0.20.2
-catprinter @ git+https://github.com/jauderho/catprinter.git@181d69ee537ec3a9deae48cec953bd2b34f0dd66
+bleak==0.20.2; python_version >= '3.7' and python_version < '4.0'
+catprinter@ git+https://github.com/jauderho/catprinter.git@9f3153ac1c78e81222a27372f44f8f4fa0bbd99d
 dbus-fast==1.92.0; platform_system == 'Linux'
-numpy==1.25.2
-opencv-python==4.8.0.76
+numpy==1.25.2; python_version >= '3.9'
+opencv-python==4.8.0.76; python_version >= '3.6'
