--- a/docker-autocompose/requirements.txt
+++ b/docker-autocompose/requirements.txt
@@ -2,14 +2,14 @@
 --extra-index-url https://www.piwheels.org/simple
 certifi==2023.7.22; python_version >= '3.6'
 charset-normalizer==3.2.0; python_full_version >= '3.7.0'
-docker==6.1.3
-docker-autocompose @ git+https://github.com/jauderho/docker-autocompose.git@d9ea8cbe8f040060c7ee56222e5e1c1755b847a7
+docker==6.1.3; python_version >= '3.7'
+docker-autocompose@ git+https://github.com/jauderho/docker-autocompose.git@0b50f5182108934fba9dacbac20bf5be8f97253e
 idna==3.4; python_version >= '3.5'
-packaging==21.3
-pyaml==23.7.0
+packaging==21.3; python_version >= '3.6'
+pyaml==23.7.0; python_version >= '3.8'
 pyparsing==3.1.1; python_full_version >= '3.6.8'
 pyyaml==6.0.1; python_version >= '3.6'
 requests==2.31.0; python_version >= '3.7'
-six==1.16.0
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 urllib3==2.0.4; python_version >= '3.7'
 websocket-client==1.6.1; python_version >= '3.7'
