--- a/visidata/requirements.txt
+++ b/visidata/requirements.txt
@@ -4,11 +4,11 @@ certifi==2023.7.22; python_version >= '3.6'
 charset-normalizer==3.2.0; python_full_version >= '3.7.0'
 idna==3.4; python_version >= '3.5'
 importlib-metadata==6.8.0; python_version >= '3.8'
-lxml==4.9.3
-python-dateutil==2.8.2
-requests==2.31.0
+lxml==4.9.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+requests==2.31.0; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 urllib3==2.0.4; python_version >= '3.7'
-visidata==2.11.1
+visidata==2.11.1; python_version >= '3.7'
 wcwidth==0.2.6
 zipp==3.16.2; python_version >= '3.8'
