--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,9 +1,9 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
-ansible==8.3.0
+ansible==8.3.0; python_version >= '3.9'
 ansible-compat==4.1.6; python_version >= '3.9'
 ansible-core==2.15.3; python_version >= '3.9'
-ansible-lint==6.17.2
+ansible-lint==6.17.2; python_version >= '3.9'
 attrs==23.1.0; python_version >= '3.7'
 bitmath==1.3.3.1
 black==23.7.0; python_version >= '3.8'
@@ -22,7 +22,7 @@ jsonschema-specifications==2023.7.1; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.3; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
-mitogen @ git+https://github.com/jauderho/mitogen.git@156b90a6539866cfbbc5d08c59b97171e5b48306
+mitogen@ git+https://github.com/jauderho/mitogen.git@156b90a6539866cfbbc5d08c59b97171e5b48306
 mypy-extensions==1.0.0; python_version >= '3.5'
 packaging==23.1; python_version >= '3.7'
 pathspec==0.11.2; python_version >= '3.7'
@@ -44,10 +44,10 @@ rpds-py==0.9.2; python_version >= '3.8'
 ruamel.yaml==0.17.32; python_version >= '3'
 ruamel.yaml.clib==0.2.7; python_version < '3.12' and platform_python_implementation == 'CPython'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-storops==1.2.11
+storops==1.2.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 subprocess-tee==0.4.1; python_version >= '3.8'
 urllib3==2.0.4; python_version >= '3.7'
 wcmatch==8.4.1; python_version >= '3.7'
-wheel==0.41.1
+wheel==0.41.1; python_version >= '3.7'
 xmltodict==0.13.0; python_version >= '3.4'
 yamllint==1.32.0; python_version >= '3.7'
