--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -14,7 +14,7 @@ cffi==1.15.1
 charset-normalizer==3.2.0; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 cryptography==41.0.3; python_version >= '3.7'
-filelock==3.12.2; python_version >= '3.7'
+filelock==3.12.3; python_version >= '3.8'
 idna==3.4; python_version >= '3.5'
 jinja2==3.1.2; python_version >= '3.7'
 jsonschema==4.19.0; python_version >= '3.8'
@@ -33,14 +33,14 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.9.1; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version != '3.4'
+pyyaml==6.0.1; python_version >= '3.6'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
 resolvelib==1.0.1
 retryz==0.1.9
 rich==13.5.2; python_full_version >= '3.7.0'
-rpds-py==0.9.2; python_version >= '3.8'
+rpds-py==0.10.0; python_version >= '3.8'
 ruamel.yaml==0.17.32; python_version >= '3'
 ruamel.yaml.clib==0.2.7; python_version < '3.12' and platform_python_implementation == 'CPython'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
