--- a/.github/workflows/miller.yml
+++ b/.github/workflows/miller.yml
@@ -42,6 +42,7 @@ jobs:
             production.cloudflare.docker.com:443
             proxy.golang.org:443
             registry-1.docker.io:443
+            storage.googleapis.com:443
           
       - name: Source checkout
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v2.4.0 
