--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -7,7 +7,7 @@ ansible-lint==6.18.0; python_version >= '3.9'
 attrs==23.1.0; python_version >= '3.7'
 bitmath==1.3.3.1
 black==23.7.0; python_version >= '3.8'
-bracex==2.3.post1; python_version >= '3.7'
+bracex==2.4; python_version >= '3.8'
 cachez==0.1.2
 certifi==2023.7.22; python_version >= '3.6'
 cffi==1.15.1
@@ -33,7 +33,7 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.9.2; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version != '3.4'
+pyyaml==6.0.1; python_version >= '3.6'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
