--- a/.github/workflows/snowball.yml
+++ b/.github/workflows/snowball.yml
@@ -30,18 +30,19 @@ jobs:
         uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09
         with:
           disable-sudo: true
-          egress-policy: audit
-          disable-telemetry: false
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: >
+            actions-results-receiver-production.githubapp.com:443
             api.github.com:443
+            archive.ubuntu.com:80
             auth.docker.io:443
-            dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
-            index.docker.io:443
             production.cloudflare.docker.com:443
-            proxy.golang.org:443
             registry-1.docker.io:443
+            security.ubuntu.com:80
+            snowball-client.s3.us-west-2.amazonaws.com:443
 
       - name: Source checkout
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v2.4.0 
