--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -21,8 +21,8 @@ RUN \
   #build_pkgs="build-base linux-headers openssl-dev pcre-dev wget zlib-dev perl-dev lld ccache openssl zlib git" && \
   apk update && \
   apk upgrade -a && \
-  build_pkgs="build-base linux-headers openssl-dev pcre-dev wget zlib-dev perl-dev ccache openssl zlib git mold" && \
-  runtime_pkgs="ca-certificates tzdata" && \
+  build_pkgs="build-base linux-headers openssl-dev pcre-dev wget zlib-dev perl-dev ccache openssl zlib git mold brotli-dev" && \
+  runtime_pkgs="ca-certificates tzdata brotli-libs" && \
   apk --no-cache add ${build_pkgs} ${runtime_pkgs} && \
   update-ca-certificates && \
   cd /tmp && \
