--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -22,7 +22,7 @@ jsonschema-specifications==2023.7.1; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.3; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
-mitogen@ git+https://github.com/jauderho/mitogen.git@156b90a6539866cfbbc5d08c59b97171e5b48306
+-e git+https://github.com/jauderho/mitogen.git@156b90a6539866cfbbc5d08c59b97171e5b48306#egg=mitogen
 mypy-extensions==1.0.0; python_version >= '3.5'
 packaging==23.1; python_version >= '3.7'
 pathspec==0.11.2; python_version >= '3.7'
@@ -33,7 +33,7 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.9.2; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version != '3.4'
+pyyaml==6.0.1; python_version >= '3.6'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
