--- a/docker-autocompose/requirements.txt
+++ b/docker-autocompose/requirements.txt
@@ -3,7 +3,7 @@
 certifi==2023.7.22; python_version >= '3.6'
 charset-normalizer==3.2.0; python_full_version >= '3.7.0'
 docker==6.1.3; python_version >= '3.7'
-docker-autocompose@ git+https://github.com/jauderho/docker-autocompose.git@3c4b827165ab00d593ee2195fae71ff6433977c0
+-e git+https://github.com/jauderho/docker-autocompose.git@e908d3b40ec0d54290bd205981bcc3dd1095c930#egg=docker-autocompose
 idna==3.4; python_version >= '3.5'
 packaging==21.3; python_version >= '3.6'
 pyaml==23.9.3; python_version >= '3.8'
