--- a/.github/workflows/rclone.yml
+++ b/.github/workflows/rclone.yml
@@ -89,7 +89,7 @@ jobs:
           #platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
           #platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64
-          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x
+          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le
           #platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6,linux/s390x
           build-args: |
             BUILD_VERSION
