--- a/pia-wg/Dockerfile
+++ b/pia-wg/Dockerfile
@@ -1,7 +1,7 @@
 #FROM ubuntu:23.04@sha256:b5d5cddaeb8d2f150660cf8f9a1203dd450ac765e6c07630176ac6486eceaddb
 FROM ubuntu:23.04@sha256:b5d5cddaeb8d2f150660cf8f9a1203dd450ac765e6c07630176ac6486eceaddb
 #FROM python:3.11.4-slim-bookworm@sha256:4b2e5faf103be72abb65046501a89f8feaef28c1148fc2f9b3326e31694ee735
-#FROM python:3.11.4-alpine3.18@sha256:f54f860d3a50f1a73dc8227f332c29f02e94349f045326d3618d30af10c69106
+#FROM python:3.12.0rc2-alpine3.18@sha256:b92ffaf56e573fcf8fae71567b4e1570b422134d359dde47719f278b2acebb6a
 
 ARG BUILD_VERSION
 ARG ARCHIVE_URL=https://github.com/jauderho/pia-wg/archive/
