--- a/catprinter/requirements.txt
+++ b/catprinter/requirements.txt
@@ -3,6 +3,6 @@
 bleak==0.21.1; python_version < '3.13' and python_version >= '3.8'
 -e git+https://github.com/jauderho/catprinter.git@7c1498332e55792a2a689049050c46555f1336e3#egg=catprinter
 dbus-fast==2.7.0; platform_system == 'Linux'
-numpy==1.25.2; python_version >= '3.9'
+numpy==1.26.0; python_version < '3.13' and python_version >= '3.9'
 opencv-python==4.8.0.76; python_version >= '3.6'
 typing-extensions==4.7.1; python_version < '3.12'
