--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -319,6 +319,12 @@ updates:
 
   # Maintain dependencies for Docker
   - package-ecosystem: "docker"
+    directory: /opentofu
+    schedule:
+      interval: "daily"
+
+  # Maintain dependencies for Docker
+  - package-ecosystem: "docker"
     directory: /pia-wg
     schedule:
       interval: "daily"
