--- a/sslyze/Pipfile
+++ b/sslyze/Pipfile
@@ -9,8 +9,8 @@ verify_ssl = true
 name = "piwheels"
 
 [packages]
-#sslyze = "*"
-sslyze = { git = "https://github.com/jauderho/sslyze.git", editable = true }
+sslyze = "*"
+#sslyze = { git = "https://github.com/jauderho/sslyze.git", editable = true }
 nassl = "*"
 cryptography = "*"
 tls-parser = "*"
