--- a/sslyze/requirements.txt
+++ b/sslyze/requirements.txt
@@ -1,12 +1,14 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
+annotated-types==0.5.0; python_version >= '3.7'
 cffi==1.15.1
 cryptography==41.0.4; python_version >= '3.7'
 nassl==5.1.0; python_version >= '3.7'
 pycparser==2.21
-pydantic==1.10.12; python_version >= '3.7'
+pydantic==2.3.0; python_version >= '3.7'
+pydantic-core==2.6.3; python_version >= '3.7'
 pyopenssl==23.2.0; python_version >= '3.6'
--e git+https://github.com/jauderho/sslyze.git@3fe0491074e9a18b14fa0c381c4192322eac7690#egg=sslyze
+sslyze==5.2.0; python_version >= '3.7'
 tls-parser==2.0.1; python_version >= '3.7'
 typing-extensions==4.8.0; python_version >= '3.8'
 wheel==0.41.2; python_version >= '3.7'
