--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -337,6 +337,12 @@ updates:
 
   # Maintain dependencies for Docker
   - package-ecosystem: "docker"
+    directory: /pstcli
+    schedule:
+      interval: "daily"
+
+  # Maintain dependencies for Docker
+  - package-ecosystem: "docker"
     directory: /pwru
     schedule:
       interval: "daily"
