--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -3,7 +3,7 @@
 ansible==8.4.0; python_version >= '3.9'
 ansible-compat==4.1.10; python_version >= '3.9'
 ansible-core==2.15.4; python_version >= '3.9'
-ansible-lint==6.20.0; python_version >= '3.9'
+ansible-lint==6.20.1; python_version >= '3.9'
 attrs==23.1.0; python_version >= '3.7'
 bitmath==1.3.3.1
 black==23.9.1; python_version >= '3.8'
@@ -33,7 +33,7 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.9.2; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version >= '3.6'
+pyyaml==6.0.1; python_version != '3.4'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
@@ -41,7 +41,7 @@ resolvelib==1.0.1
 retryz==0.1.9
 rich==13.5.3; python_full_version >= '3.7.0'
 rpds-py==0.10.3; python_version >= '3.8'
-ruamel.yaml==0.17.32; python_version >= '3'
+ruamel.yaml==0.17.33; python_version >= '3'
 ruamel.yaml.clib==0.2.7; python_version < '3.12' and platform_python_implementation == 'CPython'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 storops==1.2.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
