--- a/.github/workflows/aznamingtool.yml
+++ b/.github/workflows/aznamingtool.yml
@@ -29,15 +29,15 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09
         with:
-          egress-policy: audit
-          disable-telemetry: false
+          egress-policy: block
+          disable-telemetry: true
           disable-sudo: true
           allowed-endpoints: >
             api.github.com:443
             api.nuget.org:443
             auth.docker.io:443
             dc.services.visualstudio.com:443
-            deb.debian.org:80
+            dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
             index.docker.io:443
