--- a/.github/workflows/cf-warp.yml
+++ b/.github/workflows/cf-warp.yml
@@ -28,23 +28,19 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09 # v1
         with:
-          disable-sudo: false
-          egress-policy: audit
-          disable-telemetry: false
+          disable-sudo: true
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: 
-            95s5acprodeus1file6.blob.core.windows.net:443
             api.github.com:443
-            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
-            codeload.github.com:443
             dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
+            index.docker.io:443
             production.cloudflare.docker.com:443
-            raw.githubusercontent.com:443
             registry-1.docker.io:443
             registry.yarnpkg.com:443
-            repo.yarnpkg.com:443
           
       - name: Source checkout
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v2.4.0 
