--- a/.github/workflows/spicedb.yml
+++ b/.github/workflows/spicedb.yml
@@ -28,18 +28,16 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@8ca2b8b2ece13480cda6dacd3511b49857a23c09 # v1
         with:
-          egress-policy: audit
-          disable-telemetry: false
+          disable-sudo: true
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: 
-            95s5acprodeus1file6.blob.core.windows.net:443
             api.github.com:443
-            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
-            codeload.github.com:443
             dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
-            go.buf.build:443
+            index.docker.io:443
             production.cloudflare.docker.com:443
             proxy.golang.org:443
             registry-1.docker.io:443
