--- a/vegeta/Dockerfile
+++ b/vegeta/Dockerfile
@@ -13,7 +13,7 @@ RUN test -n "${BUILD_VERSION}" \
 	&& apk upgrade -a \
 	&& apk add --no-cache ca-certificates curl git gcc musl-dev \
 	&& update-ca-certificates \
-	&& git clone --depth 1 ${GIT_URL} /go/src/github.com/tsenart/vegeta \
+	&& git clone --depth 1 ${GIT_URL} --branch ${BUILD_VERSION} /go/src/github.com/tsenart/vegeta \
 	&& cd /go/src/github.com/tsenart/vegeta \
 	&& go build -o ./vegeta -v -trimpath -ldflags="-s -w -X main.Version=${BUILD_VERSION}" .
 
