--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -22,7 +22,7 @@ jsonschema-specifications==2023.7.1; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.3; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
--e git+https://github.com/jauderho/mitogen.git@156b90a6539866cfbbc5d08c59b97171e5b48306#egg=mitogen
+-e git+https://github.com/jauderho/mitogen.git@b7ab68745ab65d27c40a3a39d79a1c1cf14a04e0#egg=mitogen
 mypy-extensions==1.0.0; python_version >= '3.5'
 packaging==23.2; python_version >= '3.7'
 pathspec==0.11.2; python_version >= '3.7'
@@ -33,14 +33,14 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.10.2; python_version >= '3.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version != '3.4'
+pyyaml==6.0.1; python_version >= '3.6'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
 resolvelib==1.0.1
 retryz==0.1.9
 rich==13.6.0; python_full_version >= '3.7.0'
-rpds-py==0.10.3; python_version >= '3.8'
+rpds-py==0.10.4; python_version >= '3.8'
 ruamel.yaml==0.17.35; python_version >= '3'
 ruamel.yaml.clib==0.2.8; python_version < '3.13' and platform_python_implementation == 'CPython'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
