--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,6 +1,6 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
-ansible==8.4.0; python_version >= '3.9'
+ansible==8.5.0; python_version >= '3.9'
 ansible-compat==4.1.10; python_version >= '3.9'
 ansible-core==2.15.5; python_version >= '3.9'
 ansible-lint==6.20.3; python_version >= '3.9'
@@ -33,7 +33,7 @@ pygments==2.16.1; python_version >= '3.7'
 pyspnego==0.10.2; python_version >= '3.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
-pyyaml==6.0.1; python_version != '3.4'
+pyyaml==6.0.1; python_version >= '3.6'
 referencing==0.30.2; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-ntlm==1.2.0; python_version >= '3.7'
