--- a/.github/workflows/pwru.yml
+++ b/.github/workflows/pwru.yml
@@ -115,9 +115,9 @@ jobs:
           context: ${{ github.workflow }}
           file: ${{ github.workflow }}/Dockerfile.${{ matrix.distro }}
           #platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/arm/v7
-          #platforms: linux/amd64
+          platforms: linux/amd64
           #platforms: linux/amd64,linux/arm64,linux/ppc64le
-          platforms: linux/amd64,linux/arm64
+          #platforms: linux/amd64,linux/arm64
           #platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le
           build-args: |
             BUILD_VERSION
