--- a/.github/workflows/pwru.yml
+++ b/.github/workflows/pwru.yml
@@ -93,7 +93,7 @@ jobs:
           context: ${{ github.workflow }}
           file: ${{ github.workflow }}/Dockerfile
           #platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/arm/v7
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           #platforms: linux/amd64,linux/arm64,linux/arm/v7
           build-args: BUILD_VERSION
           cache-from: type=gha, scope=${{ github.workflow }}-${{ matrix.distro }}
